<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical">

    <TableRow
        android:id="@+id/header_line"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:textColor="@color/white">

        <TextView
            android:id="@+id/header_line_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:text="@string/ID"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/header_line_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="55dp"
            android:paddingLeft="55dp"
            android:paddingEnd="0dp"
            android:paddingRight="0dp"
            android:text="@string/Time"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/header_line_latitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="70dp"
            android:paddingLeft="70dp"
            android:paddingEnd="0dp"
            android:paddingRight="0dp"
            android:text="@string/Latitude"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/header_line_longitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="35dp"
            android:paddingLeft="35dp"
            android:paddingEnd="0dp"
            android:paddingRight="0dp"
            android:text="@string/Longitude"
            android:textColor="@color/white"
            android:textStyle="bold" />
    </TableRow>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/HistoryPart"
        android:textColor="@color/white" />

</LinearLayout>