<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:paddingTop="15dp"
    android:stretchColumns="0,1,2,3">

    <TableRow>

        <TextView
            android:id="@+id/header_line_id"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:gravity="center"
            android:padding="6dip"
            android:text="@string/ID"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/header_line_time"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:gravity="center"
            android:padding="6dip"
            android:text="@string/Time"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/header_line_latitude"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:gravity="center"
            android:padding="6dip"
            android:text="@string/Latitude"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/header_line_longitude"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="6dip"
            android:text="@string/Longitude"
            android:textSize="16sp" />
    </TableRow>


    <TableRow>

        <TextView
            android:id="@+id/firstLine"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="6dip"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/secondLine"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="6dip"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/thirdLine"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="6dip"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/forthLine"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="6dip"
            android:textSize="16sp" />
    </TableRow>
</TableLayout>
